Kahno-Main/StyleSheet1.css
:root {
    --main-color: #421782;
    --light-color: #5900ff;
    --dark-color: #894CCD;
}

body {
    font-family: Bahnschrift;
    margin: 0;

}
.deletebutton {
    background-color: red;
    border-color: red;
    color: white
}

input[type="button"], input[type="submit"] {
    border: 2px solid #dedede;
    border-radius: 4px;
    transition: all 0.4s ease 0s;
}
    input[type="submit"]:hover, input[type="button"]:hover {
        color: #ffffff !important;
        background: var(--main-color);
        border-color: var(--main-color) !important;
        transition: all 0.4s ease 0s;
    }

input[type="text"], input[type="password"] {
    border: 2px solid #dedede;
    border-radius: 4px;
    height: 20px;
    transition: all 0.4s ease 0s;
}
    input[type="text"]:focus, input[type="password"]:focus {
        border: 2px solid var(--main-color);
        transition: all 0.4s ease 0s;
    }

.logindiv {
    width: 20%;
    margin-left: 40%;
    margin-right: 40%;
    text-align: center;
    border: solid;
    border-radius: 20px;
    border-width: 3px;
    height: auto;
    border-color: #dedede;
    transition: all 0.3s ease-in 0s;
}

    .logindiv:hover {
        border-radius: 10px;
        border-color: var(--main-color);
        transition: all 0.6s ease-in 0s;
    }

/* The slider itself */
.slider {
    -webkit-appearance: none; /* Override default CSS styles */
    appearance: none;
    width: 100%; /* Full-width */
    height: 25px; /* Specified height */
    background: #d3d3d3; /* Grey background */
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
}


    /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
    .slider::-webkit-slider-thumb {
        -webkit-appearance: none; /* Override default look */
        appearance: none;
        width: 25px; /* Set a specific slider handle width */
        height: 25px; /* Slider handle height */
        background: var(--main-color); /* Green background */
    }

    .slider::-moz-range-thumb {
        width: 25px; /* Set a specific slider handle width */
        height: 25px; /* Slider handle height */
        background: var(--main-color); /* Green background */
    }

.ratingdiv {
    width: 100%;
    text-align: center;
    height: auto;
}

/* Add a black background color to the top navigation */
.topnav {
    background-color: white;
    position: fixed;
    width: 100%;
    margin-bottom: 10px;
    -moz-box-shadow: 3px 0px 5px 5px #ccc;
    -webkit-box-shadow: 3px 0px 5px 5px #ccc;
    box-shadow: 3px 0px 5px 5px #ccc;
}

    /* Style the links inside the navigation bar */
    .topnav a {
        float: left;
        color: dimgrey;
        text-align: center;
        padding: 10px 16px;
        text-decoration: none;
        font-size: 17px;
        transition: all 0.3s ease 0s;
    }

        /* Change the color of links on hover */
        .topnav a:hover {
            background-color: var(--main-color);
            color: white;
        }

        /* Add a color to the active/current link */
        .topnav a.active {
            background-color: #5900ff;
            color: white;
        }

.topnav b {
    float: right;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
}

        /* Change the color of links on hover */
    .topnav b:hover {
        background-color: #5900ff;
        color: black;
    }

        /* Add a color to the active/current link */
    .topnav b.active {
        background-color: #5900ff;
        color: white;
    }

.SpecialButton1 {
    border-style: none;
    border-color: inherit;
    border-width: medium;
    background-image: url('kfc.jpg');
    color: white;
    padding: 100px 100px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    z-index: 1;
    left: 15px;
    top: 330px;
    position: absolute;
    width: 203px;
    height: 199px;
    -webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
    overflow: hidden;
    cursor: pointer;
}

    .SpecialButton1:after {
        content: "";
        display: block;
        position: absolute;
        padding-top: 300%;
        padding-left: 350%;
        margin-left: -20px !important;
        margin-top: -120%;
        opacity: 0;
        transition: all 0.8s
    }

    .SpecialButton1:active:after {
        padding: 0;
        margin: 0;
        opacity: 1;
        transition: 0s
    }

    .SpecialButton1:hover {
        background-color: purple;
        color: purple;
        box-shadow: 0 12px 16px 0 purple, 0 17px 50px 0 purple;
    }


/* Add a card effect for articles */
.card {
    background-color: white;
    /*padding: 20px;*/
    margin-top: 20px;
}

/* Clear floats after the columns */
.row:after {
    content: "";
    display: table;
    clear: both;
}

/* Footer */
.footer {
    padding: 20px;
    text-align: center;
    background: #ddd;
    margin-top: 20px;
}

/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 800px) {
    .leftcolumn, .rightcolumn {
        width: 100%;
        padding: 0;
    }
}

/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
@media screen and (max-width: 400px) {
    .topnav a {
        float: none;
        width: 100%;
    }
}

.BKButton {
    border-style: none;
    border-color: inherit;
    border-width: medium;
    /*background-color: #4CAF50; /* Green */
    background-image: url('bk.jpg');
    color: white;
    padding: 100px 100px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    z-index: 1;
    left: 219px;
    top: 184px;
    position: absolute;
    width: 192px;
    height: 195px;
    -webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
    text-decoration: none;
    overflow: hidden;
    cursor: pointer;
}


    .BKButton:after {
        content: "";
        background: #f1f1f1;
        display: block;
        position: absolute;
        padding-top: 300%;
        padding-left: 350%;
        margin-left: -20px !important;
        margin-top: -120%;
        opacity: 0;
        transition: all 0.8s
    }

    .BKButton:active:after {
        padding: 0;
        margin: 0;
        opacity: 1;
        transition: 0s
    }

    .BKButton:hover {
        background-color: purple;
        color: purple;
        box-shadow: 0 12px 16px 0 purple, 0 17px 50px 0 purple;
    }

